[project]
name = "regflow-ai"
version = "0.1.0"
description = "AI-native financial services platform — agentic compliance research, automated data analysis, and ML model monitoring"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Faran Mohammed"}
]

# Phase 1 dependencies — we add more as each phase requires them
dependencies = [
    # API framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Data validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # AI agent frameworks
    "pydantic-ai>=0.1.0",
    "langgraph>=0.2.0",

    # LLM client (works with Ollama's OpenAI-compatible endpoint)
    "openai>=1.50.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",

    # Vector store
    "chromadb>=0.5.0",

    # Structured logging
    "structlog>=24.4.0",

    # Retry logic
    "tenacity>=9.0.0",

    # HTTP client (for MCP tools, external API calls)
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # FastAPI test client uses this

    # Linting & formatting
    "ruff>=0.7.0",

    # Type checking
    "mypy>=1.12.0",

    # Complexity analysis
    "radon>=6.0.0",

    # Security scanning
    "pip-audit>=2.7.0",

    # Pre-commit hooks
    "pre-commit>=4.0.0",
]

# ---------------------------------------------------------------------------
# Tool configurations — all in one file instead of scattered config files
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8 naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["chromadb.*", "langgraph.*", "pydantic_ai.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
